<resources>
    <string name="app_name">Shapes</string>

    <string name="action_settings">Settings</string>
    <string name="x">X:</string>
    <string name="y">Y:</string>
    <string name="r">R:</string>
    <string name="w">W:</string>
    <string name="h">H:</string>
    <string name="draw">Draw</string>
    <string name="clear">Clear</string>
    <string name="errMsg">Please input all params</string>





</resources>
